unpackaged/main/default/objects/Provider_Database__c/Provider_Database__c.object-meta.xml
<CustomObject>
    <label>Provider Contact Database</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Database</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>