unpackaged/main/default/objects/Provider_Database__c/fields/Fund_List_Link__c.field-meta.xml
<CustomField>
    <fullName>Fund_List_Link__c</fullName>
    <label>Fund List Link</label>
    <type>Url</type>
</CustomField>