unpackaged/main/default/objects/Provider_Database__c/fields/LOA_Format__c.field-meta.xml
<CustomField>
    <fullName>LOA_Format__c</fullName>
    <label>LOA Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>LOAs not accepted</fullName>
            </value>
            <value>
                <fullName>Third Party Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>