unpackaged/main/default/objects/Provider_Database__c/fields/Policy_Number_Required__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_Required__c</fullName>
    <label>Policy Number Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>