unpackaged/main/default/objects/Provider_Database__c/fields/Provider_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>