unpackaged/main/default/objects/Provider_Database__c/fields/Provider_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>