unpackaged/main/default/objects/Provider_Database__c/fields/Provider_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Provider_Portal_Link__c</fullName>
    <label>Portal Link</label>
    <type>Url</type>
</CustomField>