unpackaged/main/default/objects/Provider_Database__c/fields/Provider_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Post_Code__c</fullName>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>