unpackaged/main/default/objects/Provider_Database__c/fields/Public_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Provider_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Public Provider Name</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Contact Database</relationshipLabel>
    <relationshipName>Provider_Database</relationshipName>
    <type>Lookup</type>
</CustomField>