unpackaged/main/default/objects/Provider_Database__c/fields/Required_Transfer_Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Required_Transfer_Document_Required__c</fullName>
    <label>Transfer Documentation Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Soft Copy</fullName>
            </value>
            <value>
                <fullName>Origo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>