unpackaged/main/default/objects/Provider_Database__c/listViews/Provider_Database.listView-meta.xml
<ListView>
    <fullName>Provider_Database</fullName>
    <columns>NAME</columns>
    <columns>Checklist_Type__c</columns>
    <columns>Company__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Types__c</columns>
    <columns>Provider_Contact_Number__c</columns>
    <columns>Provider_Email_Address__c</columns>
    <columns>Key_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>LOA Database</label>
</ListView>